--- a/style.css
+++ b/style.css
@@ -36,11 +36,11 @@ a {
 
 .bg-1 {
     background-color: #ffffff; /* White */
-    color: #555555;
+    color: #262626; /* 555555*/
 }
 
 .bg-2 {
-    background-color: #2e72a1; /* Blue */
+    background-color: #465759; /* Blue 2e72a1 */
     color: #ffffff;
 }
 
