--- a/style.css
+++ b/style.css
@@ -35,12 +35,12 @@ a {
 }
 
 .bg-1 {
-    background-color: #ffffff; /* White */
+    background-color: ##8C8484; /* grey */
     color: #262626; /* 555555*/
 }
 
 .bg-2 {
-    background-color: #465759; /* Blue 2e72a1 */
+    background-color: #465759; /* grey */
     color: #ffffff;
 }
 
@@ -54,7 +54,7 @@ a {
 }
 
 .bg-3 {
-    background-color: #000000; /* Black */
+    background-color: #404040; /* grey */
     color: #ffffff;
 }
 
