--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a {
 }
 
 .bg-2 {
-    background-color: #465759; /* grey */
+    background-color: #F28B30; /* grey */
     color: #ffffff;
 }
 
@@ -54,12 +54,12 @@ a {
 }
 
 .bg-3 {
-    background-color: #404040; /* grey */
+    background-color: #F24C27; /* grey */
     color: #ffffff;
 }
 
 .bg-4 {
-    background-color: #343a40; /* Dark Gray */
+    background-color: #A62424; /* Dark Gray */
     color: #fff;
 }
 
